export type Space = "isGoal" | "isStart" | "isObstacle" | "isVacant";
export type IsAdjacent = "Adjacent" | "NotAdjacent";
export type Color = "Red" | "Green" | "Blue" | "Yellow" | "Purple" | "Orange" | "Black" | "White";